--- a/src/Components/NavMenu/NavMenu.scss
+++ b/src/Components/NavMenu/NavMenu.scss
@@ -1,15 +1,30 @@
+@use "../../assets/sass/variables" as *;
+
 .nav-menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 50px;
+    height: 20rem;
+    background-color: #1c1c1c;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    margin-bottom: 30px;
+    color: $color-white;
   
     &__content {
-        height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
+        padding-bottom: 20px;
+
+        &-check {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          gap: 10px;
+        }
       }
 
     &__cross {
@@ -21,4 +36,8 @@
           cursor: pointer;
         }
       }
+
+    &__search {
+      margin-bottom: 30px;
+    }
   }
